# python-testuff

./: .gitignore  1.py  LICENSE  README.md  developer.htm  pyproject.toml  setup.py  upwork.txt
python_testuff/: client.py  models.py
tests/: 1.py  test_client.py
testuff/: 1.py  __init__.py  models.py  utils.py
