[project]
name = 'testuff'
version = '0.1.0'
description = 'SDK package for accessing Testuff API'
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = 'Testuff Dev', email = 'contact@testuff.com'},
]

classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]


dependencies = [
    'requests>=2.25.1'
]

[dependency-groups]
dev = [
   ]

[project.urls]
Homepage = 'https://testuff.com'
Repository = 'https://github.com/TestuffAPI/python-testuff'
Issues = 'https://github.com/TestuffAPI/python-testuff/issues'